# sc_pri

./: .gitignore  pyproject.toml
configs/: data.yaml
sc_pri/: channel.py  diffusion.py  utils.py  vae.py
sc_pri/data/: latent_dataset.py  oi_cache.py
sc_pri/models/: mask_decoder.py
sc_pri/viz/: sanity.py
scripts/: 00_verify.mids.py  01_download_oi.py  02_cache_latents.py  03_visualize_cache.py  04_verify_inpaint.py  05_train_mask_decoder.py  06_e2e_verify.py  07_verify_denoise.py  08_train_lora_denoise.py  09_eval_maskdecoder_inputs.py  10_quantitative_eval.py
